[gd_scene load_steps=3 format=3 uid="uid://bh86ft1kcf5an"]

[ext_resource type="Script" uid="uid://btc77tf72gyeh" path="res://Powers/Dash Power/speed_collectable.gd" id="1_6ovr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgxjm"]

[node name="speed_collectable" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6ovr7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lgxjm")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
